[project]
name = "rnhttp"
version = "0.0.1"
description = "HTTP/1.1 over Reticulum Network Stack"
requires-python = ">=3.10"
dependencies = [
    "rns>=1.1.0",
    "httptools>=0.7.1",
]

[tool.setuptools]
packages = ["rnhttp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = [
    "UP",
    "PL",
    "ANN",
    "S",
]
ignore = [
    "PLW0603",
    "PLR2004",
    "PLR0915",
    "PLR0912",
    "PLR0911",
    "PLR6301",
    "PLR0913",
    "PLW1641",
    "S101",
    "S404",
    "S603",
    "S607",
    "ANN401",
    "ANN001",
    "ANN003",
    "ANN201",
]
