[project]
name = "rnhttp"
version = "0.0.2"
description = "HTTP/1.1 over Reticulum Network Stack"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Eeems", email="eeems@eeems.email"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["readme"]
dependencies = [
    "rns>=1.1.0",
    "httptools>=0.7.1",
    "overrides==7.7.0; python_version<\"3.12\""
]

[tool.setuptools]
packages = ["rnhttp"]

[tool.setuptools.dynamic]
readme = {file= ["README.md"], content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff",
    "basedpyright",
    "vulture",
    "dodgy",
    "pyroma",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=70.1", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"

[tool.ruff]
exclude = [".venv", "build", "**/__whitelist.py"]

[tool.ruff.lint]
extend-select = [
    "UP",
    "PL",
    "ANN",
    "S",
]
ignore = [
    "PLW0603",
    "PLR2004",
    "PLR0915",
    "PLR0912",
    "PLR0911",
    "PLR6301",
    "PLR0913",
    "PLW1641",
    "S101",
    "S404",
    "S603",
    "S607",
    "ANN401",
    "ANN001",
    "ANN003",
    "ANN201",
]

[tool.pyright]
exclude = [".venv", "build", "**/__whitelist.py"]
reportMissingTypeStubs = false

[tool.vulture]
ignore_names = ["__*", "_*", "_"]
ignore_decorators = [
    "@app.request",
    "@app.page",
    "@app.file",
    '@pytest.fixture',
]
exclude = [
    ".venv/",
    "build/",
]
